--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -1,14 +1,14 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion "26.0.0"
+    compileSdkVersion 28
+
     defaultConfig {
         applicationId "com.seventhmoon.tenniswearboard"
         minSdkVersion 20
-        targetSdkVersion 26
-        versionCode 22
-        versionName "1.21"
+        targetSdkVersion 28
+        versionCode 23
+        versionName "1.22"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -20,12 +20,13 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:3.0.1', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    //compile 'com.android.support:appcompat-v7:26.0.0-alpha1'
     wearApp project(':wear')
-    compile 'com.google.android.gms:play-services-wearable:11.0.4'
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:26.0.0-alpha1'
+    implementation 'com.google.android.gms:play-services-wearable:11.6.0'
+    testImplementation 'junit:junit:4.12'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
 }
