--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,46 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+    ext {
+        compileSdkVersion = 29
+        minSdkVersion = 21
+        targetSdkVersion = 29
+
+        // Dependency versions.
+        androidx_app_compat_version = '1.1.0'
+        androidx_material_version = '1.1.0'
+        androidx_car_version = '1.0.0-alpha7'
+        androidx_core_ktx_version = '1.0.1'
+        androidx_media_version = '1.0.1'
+        androidx_preference_version = '1.0.0'
+        androidx_test_runner_version = '1.1.1'
+        arch_lifecycle_version = '2.2.0'
+        constraint_layout_version = '1.1.3'
+        espresso_core_version = '3.1.0'
+        exoplayer_version = '2.10.0'
+        glide_version = '4.9.0'
+        gms_strict_version_matcher_version = '1.0.3'
+        gradle_version = '3.1.4'
+        gson_version = '2.8.5'
+        junit_version = '4.12'
+        kotlin_version = '1.3.61'
+        kotlin_coroutines = '1.1.0'
+        materialVersion = '1.0.0'
+        recycler_view_version = '1.0.0'
+        robolectric_version = '4.2'
+        test_runner_version = '1.2.0'
+
+        okhttp_version = '4.0.1'
+        okio_version = '2.2.2'
+        androidx_percentlayout_version = '1.0.0'
+    }
+
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.3.2'
+        classpath 'com.android.tools.build:gradle:3.6.0'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
