--- a/wear/build.gradle
+++ b/wear/build.gradle
@@ -1,15 +1,22 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion rootProject.compileSdkVersion
 
     defaultConfig {
         applicationId "com.seventhmoon.tenniswearboard"
         //if want to release wear 2.0 for wear only, minSdkVersion and targetSdkVersion must be 25
-        minSdkVersion 23
-        targetSdkVersion 28
+
         versionCode 23
         versionName "1.22"
+
+        minSdkVersion rootProject.minSdkVersion
+        targetSdkVersion rootProject.targetSdkVersion
+
+        compileOptions {
+            sourceCompatibility JavaVersion.VERSION_1_8
+            targetCompatibility JavaVersion.VERSION_1_8
+        }
     }
     buildTypes {
         release {
@@ -21,13 +28,13 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestImplementation('com.android.support.test.espresso:espresso-core:3.0.1', {
+    androidTestImplementation('androidx.test.espresso:espresso-core:3.2.0', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     //compile 'com.android.support:appcompat-v7:26.0.0-alpha1'
-    implementation project(':WheelPicker-1.1.2')
-    implementation 'com.google.android.support:wearable:2.1.0'
-    compileOnly 'com.google.android.wearable:wearable:2.1.0'
-    implementation 'com.google.android.gms:play-services-wearable:11.6.0'
-    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.google.android.support:wearable:2.5.0'
+    compileOnly 'com.google.android.wearable:wearable:2.5.0'
+    implementation 'com.google.android.gms:play-services-wearable:17.0.0'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'cn.aigestudio.wheelpicker:WheelPicker:1.1.3'
 }
